# clinical-guideline-extractor

./: .gitignore  README.md  pyproject.toml
guidelines/_template/: extract.md  tiebreak.md
guidelines/iccm/: verify.md
guidelines/ucg-2023/: extract.md  tiebreak.md  verify.md
guidelines/who-malaria/: extract.md  tiebreak.md  verify.md
src/: main.py  qa_sample.py
src/extraction/: claude_extract.py  gemini_extract.py  prompt.py
src/shared/: api_client.py  cost_tracker.py  manifest.py  metrics.py
src/stage0_prep/: docling_structure.py  pdfplumber_extract.py  render.py  repair.py
src/stage1_diff/: diff.py  escalate.py  tokenize.py
src/stage2_resolve/: gemini_tiebreak.py  pdfplumber_oracle.py  resolve.py
src/stage3_validate/: claude_verify.py  dose_confirm.py  med7_ner.py  regex_validate.py
src/stage4_review/: generate_queue.py  review_ui.py
src/stage5_assemble/: assemble.py  images.py
